<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/header_bg"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/ivMainMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/medium"
            android:src="@drawable/menu" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/llMainSlider"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/sliding_menu"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/llMainSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/extra_small"
                    android:paddingLeft="@dimen/extra_small"
                    android:paddingRight="@dimen/extra_large"
                    android:paddingTop="@dimen/extra_small" >

                    <ImageView
                        android:id="@+id/ivMainSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/medium"
                        android:src="@drawable/ic_launcher" />

                    <TextView
                        android:id="@+id/tvMainSearch"
                        style="@style/sliding_menu_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tab_one" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/seperator_bg"
                    android:orientation="vertical" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llMainHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/extra_small"
                    android:paddingLeft="@dimen/extra_small"
                    android:paddingRight="@dimen/extra_large"
                    android:paddingTop="@dimen/extra_small" >

                    <ImageView
                        android:id="@+id/ivMainHistory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/medium"
                        android:src="@drawable/ic_launcher" />

                    <TextView
                        android:id="@+id/tvMainHistory"
                        style="@style/sliding_menu_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tab_two" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/seperator_bg"
                    android:orientation="vertical" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llMainFavorite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/extra_small"
                    android:paddingLeft="@dimen/extra_small"
                    android:paddingRight="@dimen/extra_large"
                    android:paddingTop="@dimen/extra_small" >

                    <ImageView
                        android:id="@+id/ivMainFavorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/medium"
                        android:src="@drawable/ic_launcher" />

                    <TextView
                        android:id="@+id/tvMainFavorite"
                        style="@style/sliding_menu_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tab_three" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/seperator_bg"
                    android:orientation="vertical" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llMainSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/extra_small"
                    android:paddingLeft="@dimen/extra_small"
                    android:paddingRight="@dimen/extra_large"
                    android:paddingTop="@dimen/extra_small" >

                    <ImageView
                        android:id="@+id/ivMainSettings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/medium"
                        android:src="@drawable/ic_launcher" />

                    <TextView
                        android:id="@+id/tvMainSettings"
                        style="@style/sliding_menu_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tab_four" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/seperator_bg"
                    android:orientation="vertical" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llMainAboutUs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/extra_small"
                    android:paddingLeft="@dimen/extra_small"
                    android:paddingRight="@dimen/extra_large"
                    android:paddingTop="@dimen/extra_small" >

                    <ImageView
                        android:id="@+id/ivMainAboutUs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/medium"
                        android:src="@drawable/ic_launcher" />

                    <TextView
                        android:id="@+id/tvMainAboutUs"
                        style="@style/sliding_menu_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tab_five" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/seperator_bg"
                    android:orientation="vertical" >
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/dark_text_color"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/flMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </FrameLayout>
    </RelativeLayout>

</LinearLayout>